# ublox-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml  rust.yml
examples/adr-message-parsing/: Cargo.toml
examples/adr-message-parsing/src/: main.rs
examples/basic-ublox-cli/: Cargo.toml
examples/basic-ublox-cli/src/: main.rs
examples/basic_cli/: Cargo.toml
examples/basic_cli/src/: main.rs
examples/send-receive-multiple-threads/: Cargo.toml
examples/send-receive-multiple-threads/src/: main.rs
examples/send_receive_multithread/src/: main.rs
ublox/: Cargo.toml
ublox/src/: parser.rs  ubx_packets.rs
ublox/src/ubx_packets/: cfg_val.rs  packets.rs  packets_recv.rs  packets_send.rs  types.rs
ublox/tests/: parser_binary_dump_test.rs  parser_tests.rs
ublox_cli/: Cargo.toml
ublox_cli/src/: main.rs
ublox_derive/: Cargo.toml
ublox_derive/src/: output.rs
