[package]
authors = ["Lane Kolbly <lane@rscheme.org>", "Andrei Gherghescu <gandrein@pm.me>"]
edition = "2018"
name = "ublox_cli"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
clap = {version = "4.2.7", features = ["cargo"]}
serde_json = "1.0.85"
serialport = "4.2.0"
ublox = {path = "../ublox"}
